<resources>
    <string name="app_name">EUR Converter</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_clear">CE</string>
    <string name="btn_del">&#60;-</string>
    <string name="btn_equal">=</string>
    <string name="btn_com">,</string>
    <string name="btn_lliures">LLIURES</string>
    <string name="btn_dollar">DOLLAR</string>
    <string name="btn_yen">YEN</string>
    <string name="btn_yuan">YUAN</string>
</resources>
